--- a/pet-rescue/Views/Account/Register.cshtml
+++ b/pet-rescue/Views/Account/Register.cshtml
@@ -51,6 +51,12 @@
             </div>
         </div>
         <div class="form-group">
+            @Html.LabelFor(m => m.Birthdate, new { @class = "col-md-2 control-label" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.Birthdate, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group">
             @Html.LabelFor(m => m.Address1, new { @class = "col-md-2 control-label" })
             <div class="col-md-10">
                 @Html.TextBoxFor(m => m.Address1, new { @class = "form-control" })
